// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`animate/animate.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.uiJsIndex = 0;
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Hello world.\\n\\n{{#animate \\"typewriter\\" loop=true}}This is animated.{{/animate}}\\n\\n{{#animate \\"typewriter\\" start=2000}}This is some much longer text which is also animated, but not looped.{{/animate}}\\n\\n{{#animate \\"typewriter\\"}}More typewriter text.{{/animate}}\\n\\nCheck out {{#animate \\"typewriter\\" trigger=\\"link\\"}}{{passage \\"this animation\\"}}{{/animate}}.\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}",
        "passages": {
            "this animation": {
                "text": "Cool huh?\\n"
            }
        }
    },
    "_continue1": {
        "text": "{{#animate \\"typewriter\\" interval=500}}This is a bit slower.{{/animate}}\\n\\n{{section \\"_continue2\\" text=\\"Would you like some toast?\\"}}"
    },
    "_continue2": {
        "text": "{{#animate \\"toast\\"}}This text appears word by word with a toast effect.{{/animate}}\\n\\n{{section \\"_continue3\\" text=\\"Custom animation\\"}}"
    },
    "_continue3": {
        "text": "{{#animate \\"custom-animation\\"}}This text appears with a custom animation defined in ui.js.{{/animate}}"
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.registerAnimation('custom-animation', function(el, params, onComplete, loop) {
    // Based on the sample in the animejs docs: https://animejs.com/documentation/animation
    const { animate, stagger, text } = squiffy.import.animejs;

    const { chars } = text.split(el, { words: false, chars: true });

    animate(chars, {
        // Property keyframes
        y: [
            { to: '-2.75rem', ease: 'outExpo', duration: 600 },
            { to: 0, ease: 'outBounce', duration: 800, delay: 100 }
        ],
        // Property specific parameters
        rotate: {
            from: '-1turn',
            delay: 0
        },
        delay: stagger(50),
        ease: 'inOutCirc',
        loopDelay: 1000,
        loop: loop,
        onComplete: onComplete
    });
});

	},
];"
`;

exports[`attributes/attributes.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Set a start value: {{section \\"one\\" text=\\"1\\"}} or {{section \\"two\\" text=\\"2\\"}}.\\n",
        "attributes": [
            "my_string = some text"
        ]
    },
    "one": {
        "text": "Maybe you'd like it to be {{passage \\"three\\" text=\\"3\\"}} instead? Or you could just {{section \\"next\\" text=\\"continue...\\"}}\\n",
        "attributes": [
            "my_attribute = 1"
        ],
        "passages": {
            "three": {
                "text": "OK. Three it is.\\n",
                "attributes": [
                    "my_attribute = 3",
                    "chose_passage"
                ]
            }
        }
    },
    "two": {
        "text": "Maybe you'd like it to be {{passage \\"four\\" text=\\"4\\"}} instead? You could try {{passage \\"javascript\\"}}. Or you could just {{section \\"next\\" text=\\"continue...\\"}}\\n",
        "attributes": [
            "my_attribute = 2"
        ],
        "passages": {
            "javascript": {
                "text": "",
                "jsIndex": 0
            },
            "four": {
                "text": "OK. Four it is.\\n",
                "attributes": [
                    "my_attribute = 4",
                    "chose_passage"
                ]
            }
        }
    },
    "next": {
        "text": "my_attribute = {{my_attribute}}\\n\\nAlso, my_string = \\"{{my_string}}\\"\\n\\nDid you choose a passage link? {{#if chose_passage}}yes{{else}}no{{/if}} {{passage \\"unset\\"}}\\n\\nClick some more links: {{passage \\"a\\"}}, {{passage \\"b\\"}}, {{passage \\"c\\"}}, {{passage \\"d\\"}}, {{passage \\"e\\"}} and then click {{section \\"done\\"}}.\\n",
        "passages": {
            "unset": {
                "text": "Now the value is: {{#if chose_passage}}yes{{else}}no{{/if}}\\n",
                "attributes": [
                    "not chose_passage"
                ]
            },
            "a": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "b": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "c": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "d": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            },
            "e": {
                "text": "OK...\\n",
                "attributes": [
                    "count+=1"
                ]
            }
        }
    },
    "done": {
        "text": "You clicked {{count}} links. What about calling {{passage \\"dec\\"}}?\\n",
        "passages": {
            "dec": {
                "text": "Now count is {{count}}. You can also {{passage \\"increase\\"}} or {{passage \\"decrease\\"}} by values other than 1.\\n",
                "attributes": [
                    "count-=1"
                ]
            },
            "increase": {
                "text": "Now count is {{count}}.\\n",
                "attributes": [
                    "count+=10"
                ]
            },
            "decrease": {
                "text": "Now count is {{count}}.",
                "attributes": [
                    "count-=5"
                ]
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("my_attribute " + get("my_attribute"));
	},
];"
`;

exports[`clearscreen/clearscreen.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "{{passage \\"one\\" text=\\"This link\\"}} doesn't clear the screen. But {{passage \\"two\\" text=\\"this link\\"}} does.\\n",
        "passages": {
            "one": {
                "text": "This text is on the same screen.\\n"
            },
            "two": {
                "clear": true,
                "text": "This text is on a new screen. This {{section \\"same page\\" text=\\"section\\"}} will be on the same screen, and this {{section \\"clear section\\" text=\\"section\\"}} clears the screen.\\n"
            }
        }
    },
    "same page": {
        "text": "This section is on the same screen.\\n"
    },
    "clear section": {
        "clear": true,
        "text": "Another new page."
    }
};
story.js = [
];"
`;

exports[`continue/continue.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Here is some text.\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}"
    },
    "_continue1": {
        "text": "More text.\\n\\n{{section \\"_continue2\\" text=\\"Carry on further...\\"}}"
    },
    "_continue2": {
        "text": "There's some more text now.\\n\\n{{section \\"_continue3\\" text=\\"Keep walking!\\"}}"
    },
    "_continue3": {
        "text": "Oh, even more text appeared!\\n\\n{{section \\"_continue4\\" text=\\"A little closer...\\"}}"
    },
    "_continue4": {
        "text": "Pretty scary.",
        "jsIndex": 0
    }
};
story.js = [
	(squiffy, get, set) => {
		alert("BOO!")
	},
];"
`;

exports[`gameshow/gameshow.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "intro";
story.sections = {
    "": {
        "clear": true,
        "text": "{{#if (not (at \\"intro\\"))}}\\n**SCORE: {{live \\"score\\"}}** | **ROUND: {{live \\"round\\"}}** | Host Patience: {{live \\"patience\\" section=\\"patience display\\"}}\\n{{/if}}\\n"
    },
    "patience display": {
        "text": "{{#if (gte patience 3)}}_Cheerful_{{else}}{{#if (gte patience 1)}}_Strained_{{else}}_Murderous_{{/if}}{{/if}}\\n"
    },
    "intro": {
        "text": "**{{#animate \\"typewriter\\" interval=200}}WELCOME TO...{{/animate}}**\\n\\n{{#animate \\"toast\\" interval=200}}THE WHEEL OF _DUBIOUS_ FORTUNE!{{/animate}}\\n\\n{{#animate \\"fadeIn\\" duration=2000}}\\nThe studio lights flicker ominously. A man in a sequined jacket stumbles onto the stage, holding cue cards upside down.\\n\\n\\"Hello and welcome! I'm your host, Chuck Wheelsworth!\\" He squints at the cards. \\"No wait, that's not right. I'm Hank Spinneroni. Definitely Hank.\\"\\n\\nThe audience—three people and a cardboard cutout—applauds uncertainly.\\n\\n\\"And YOU are our lucky contestant! What's your name?\\"\\n\\n<input type=\\"text\\" data-attribute=\\"player_name\\" placeholder=\\"Enter your name...\\" required minlength=\\"2\\" maxlength=\\"30\\">\\n\\n{{section \\"_continue1\\" text=\\"Let's play!\\"}}\\n{{/animate}}\\n",
        "attributes": [
            "score = 0",
            "round = 0",
            "patience = 3"
        ]
    },
    "_continue1": {
        "text": "{{#if (not player_name)}}{{set \\"player_name\\" \\"Mystery Contestant\\"}}{{/if}}\\n\\n\\"Welcome, {{player_name}}! Or as I like to call you... {{player_name}}!\\"\\n\\nHank pauses, waiting for laughter. None comes.\\n\\n{{embed \\"catchphrase\\"}}\\n\\n\\"Now then! {{#animate \\"continue\\" style=\\"wave\\"}}Let's spin...{{/animate}}\\"\\n\\n{{#animate \\"typewriter\\"}}THE WHEEL OF DUBIOUS FORTUNE!{{/animate}}\\n\\n{{#animate \\"fadeIn\\"}}\\nA rusty wheel descends from the ceiling, wobbling dangerously. It has several questionable categories painted on it.\\n\\n{{section \\"Spin the wheel!\\" text=\\"Spin the wheel!\\"}}\\n{{/animate}}\\n",
        "attributes": [
            "round = 1"
        ],
        "passages": {
            "catchphrase": {
                "text": "\\"Remember our motto: _'Whose Fortune Is It Anyway? (Legally Speaking, Ours)'_\\"\\n"
            }
        }
    },
    "Spin the wheel!": {
        "text": "The wheel creaks to life, spinning with a sound like a shopping cart hitting a pothole.\\n\\nIt lands on... {{#animate \\"toast\\"}}{{sequence (array \\"GENERAL KNOWLEDGE\\" \\"SCIENCE with PROFESSOR BOOM\\" \\"MYSTERY BOX\\" \\"THE AUDIENCE DECIDES\\") set=\\"category\\"}}!{{/animate}}\\n\\n{{live \\"category\\" section=\\"showCategory\\"}}\\n"
    },
    "showCategory": {
        "text": "{{#if (eq category \\"GENERAL KNOWLEDGE\\")}}{{section \\"General Knowledge Round\\"}}{{/if}}\\n{{#if (eq category \\"SCIENCE with PROFESSOR BOOM\\")}}{{section \\"Science Round\\"}}{{/if}}\\n{{#if (eq category \\"MYSTERY BOX\\")}}{{section \\"Mystery Box Round\\"}}{{/if}}\\n{{#if (eq category \\"THE AUDIENCE DECIDES\\")}}{{section \\"Audience Round\\"}}{{/if}}\\n"
    },
    "General Knowledge Round": {
        "text": "\\"Ah, General Knowledge! The knowledge of generals! Or... general... people.\\" Hank shuffles his cards.\\n\\n\\"Here's your question, {{player_name}}:\\"\\n\\n**What is the capital of France?**\\n\\nYour answer: {{#label \\"answer\\"}}{{rotate (array \\"Paris\\" \\"London\\" \\"A baguette\\" \\"France doesn't exist\\") set=\\"gk_answer\\"}}{{/label}}\\n\\nStatus: {{#label \\"status\\"}}Waiting for answer...{{/label}}\\n\\n{{passage \\"Lock in answer\\"}}\\n",
        "passages": {
            "Lock in answer": {
                "text": "{{#replace \\"answer\\"}}**{{gk_answer}}**{{/replace}}\\n{{#replace \\"status\\"}}**LOCKED IN!**{{/replace}}\\n\\n{{#if (eq gk_answer \\"Paris\\")}}\\n{{#animate \\"toast\\"}}CORRECT!{{/animate}}\\n\\n{{#animate \\"fadeIn\\"}}\\n\\"That's right! Paris! City of lights, city of love, city of... bread?\\" Hank looks confused but happy.\\n{{/animate}}\\n\\n{{inc \\"score\\" 100}}\\n{{else}}\\n{{#if (eq gk_answer \\"A baguette\\")}}\\n{{dec \\"patience\\"}}\\n\\"A baguette? A BAGUETTE?!\\" Hank's eye twitches. \\"That's not even a city, {{player_name}}!\\"\\n\\nThe audience cardboard cutout falls over.\\n{{else}}\\n{{#if (eq gk_answer \\"France doesn't exist\\")}}\\n{{dec \\"patience\\"}}{{dec \\"patience\\"}}\\nHank stares at you for a very long time.\\n\\n\\"Security, please note that {{player_name}} is a 'flight risk.'\\"\\n{{else}}\\n\\"London? LONDON?!\\" Hank throws his cue cards in the air. \\"That's in... that's in a whole other country!\\"\\n{{dec \\"patience\\"}}\\n{{/if}}\\n{{/if}}\\n{{/if}}\\n\\n{{section \\"Next Round\\"}}\\n"
            }
        }
    },
    "Science Round": {
        "text": "The lights flicker and a trapdoor opens in the floor. Smoke billows out.\\n\\n{{#animate \\"typewriter\\"}}PROFESSOR BOOM has entered the chat.{{/animate}}\\n\\nA wild-haired scientist emerges, goggles askew, lab coat singed.\\n\\n\\"GREETINGS, QUIZ PARTICIPANT! I am Professor Boom, and THIS—\\" he holds up a beaker of bubbling green liquid \\"—is SCIENCE!\\"\\n\\nHank backs away nervously. \\"Professor, we talked about bringing chemicals on set...\\"\\n\\n\\"SILENCE, TELEVISION MAN! The contestant must answer... {{#animate \\"toast\\"}}A SCIENCE QUESTION!{{/animate}}\\"\\n\\n**What is the chemical symbol for Gold?**\\n\\nLab Stability: {{live \\"stability\\"}}%\\n\\nChoose your answer:\\n- {{passage \\"Answer: Au\\"}}\\n- {{passage \\"Answer: Go\\"}}\\n- {{passage \\"Answer: Gd\\"}}\\n- {{passage \\"Drink the beaker\\"}}\\n",
        "attributes": [
            "stability = 100"
        ],
        "passages": {
            "@1": {
                "text": "{{dec \\"stability\\" 10}}\\nThe beaker bubbles more aggressively.\\n"
            },
            "@2": {
                "text": "{{dec \\"stability\\" 15}}\\nProfessor Boom: \\"HURRY! The compound is becoming... UNSTABLE!\\"\\n"
            },
            "@3": {
                "text": "{{dec \\"stability\\" 25}}\\n{{#animate \\"toast\\"}}WARNING: CRITICAL INSTABILITY{{/animate}}\\n\\nSmall explosions begin occurring around the lab set.\\n"
            },
            "Answer: Au": {
                "text": "{{#animate \\"toast\\"}}CORRECT!{{/animate}}\\n\\n\\"AU! YES! Gold! Aurum! The element of CHAMPIONS!\\" Professor Boom throws the beaker in the air and catches it. \\"You have pleased me, {{player_name}}!\\"\\n\\n{{inc \\"score\\" 200}}\\n\\n{{section \\"Professor Exit\\"}}\\n"
            },
            "Answer: Go": {
                "text": "\\"GO?! That's not even— that's just the word GO!\\" Professor Boom's hair somehow becomes more wild.\\n\\n{{dec \\"stability\\" 30}}\\n{{dec \\"patience\\"}}\\n\\n{{#if (lte stability 30)}}\\n{{#animate \\"toast\\"}}BOOM!{{/animate}}\\n\\nA small explosion singes Hank's eyebrows.\\n\\n\\"MY EYEBROWS! Those were RENTED!\\"\\n{{/if}}\\n\\n{{section \\"Professor Exit\\"}}\\n"
            },
            "Answer: Gd": {
                "text": "\\"Gd is GADOLINIUM! An honest mistake for a FOOL!\\"\\n\\n{{dec \\"stability\\" 20}}\\n{{dec \\"patience\\"}}\\n\\n{{section \\"Professor Exit\\"}}\\n"
            },
            "Drink the beaker": {
                "text": "You grab the beaker and drink it before anyone can stop you.\\n\\nProfessor Boom: \\"WAIT! That's my lunch!\\"\\n\\n{{#animate \\"toast\\"}}It tastes like... chicken soup?{{/animate}}\\n\\n\\"I was heating up my soup with SCIENCE. Now I have no lunch AND no science demonstration.\\"\\n\\n{{inc \\"score\\" 50}}\\nThe audience (including the cardboard) applauds your boldness.\\n\\n{{section \\"Professor Exit\\"}}\\n"
            }
        }
    },
    "Professor Exit": {
        "text": "Professor Boom descends back through the trapdoor, cackling.\\n\\n\\"UNTIL NEXT TIME, QUIZ PARTICIPANT! REMEMBER: SCIENCE IS JUST EXPLOSIONS IN A LAB COAT!\\"\\n\\nThe trapdoor slams shut. Hank pats out a small fire on his jacket.\\n\\n\\"Right. Well. That happened.\\"\\n\\n{{section \\"Next Round\\"}}\\n"
    },
    "Mystery Box Round": {
        "text": "A golden box descends from the ceiling on a frayed rope.\\n\\n\\"Ooh, the Mystery Box!\\" Hank claps his hands. \\"This could contain ANYTHING! A prize! A question! A live animal! We genuinely don't know—the intern who loaded it quit this morning!\\"\\n\\nThe box rattles ominously.\\n\\n{{passage \\"Open the box carefully\\"}}\\n{{passage \\"Shake the box first\\"}}\\n{{passage \\"Refuse to open it\\"}}\\n",
        "passages": {
            "Open the box carefully": {
                "text": "You lift the lid slowly...\\n\\n{{random (array \\"prize\\" \\"bees\\" \\"another_box\\" \\"philosophy\\") set=\\"box_contents\\"}}\\n\\n{{#if (eq box_contents \\"prize\\")}}\\n{{#animate \\"toast\\"}}JACKPOT!{{/animate}}\\n\\nInside is a solid gold trophy shaped like a wheel! It's spray-painted gold, but still!\\n\\n{{inc \\"score\\" 300}}\\n\\n\\"Congratulations! You've won our grand prize: a trophy AND the satisfaction of not being attacked by whatever else could have been in there!\\"\\n{{/if}}\\n\\n{{#if (eq box_contents \\"bees\\")}}\\n{{#animate \\"toast\\"}}BEES!{{/animate}}\\n\\nThe box is full of bees. They seem confused but not aggressive.\\n\\n\\"Oh no, NOT AGAIN!\\" Hank runs in circles. \\"WHO KEEPS PUTTING BEES IN THE MYSTERY BOX?!\\"\\n\\n{{dec \\"patience\\"}}\\n\\nA bee lands on your nose, considers its life choices, and flies away. You feel oddly respected.\\n\\n{{inc \\"score\\" 50}}\\n{{/if}}\\n\\n{{#if (eq box_contents \\"another_box\\")}}\\nInside the box is... another, smaller box.\\n\\n\\"Ah, the recursive box!\\" Hank nods sagely. \\"Open it!\\"\\n\\nInside THAT box is a note that says: \\"{{player_name}} wins 100 points!\\"\\n\\n{{inc \\"score\\" 100}}\\n\\n{{#animate \\"toast\\"}}Congratulations, somehow!{{/animate}}\\n{{/if}}\\n\\n{{#if (eq box_contents \\"philosophy\\")}}\\nInside is a small scroll. It reads:\\n\\n_\\"What IS a prize, really? Is not the true prize the friends we made along the way? Also here's 75 points.\\"_\\n\\n{{inc \\"score\\" 75}}\\n\\nHank wipes away a single tear. \\"Beautiful.\\"\\n{{/if}}\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "Shake the box first": {
                "text": "You shake the box vigorously. Something inside goes \\"CLANG\\" and then \\"moo?\\"\\n\\n{{dec \\"patience\\"}}\\n\\n\\"Please don't shake the— you know what, fine. Open it.\\"\\n\\n{{passage \\"Open the box carefully\\"}}\\n"
            },
            "Refuse to open it": {
                "text": "{{dec \\"patience\\"}}{{dec \\"patience\\"}}\\n\\n\\"You HAVE to open it! It's the MYSTERY BOX! The mystery is legally required to be resolved!\\"\\n\\nHank is sweating now.\\n\\n{{passage \\"Open the box carefully\\"}}\\n"
            }
        }
    },
    "Audience Round": {
        "text": "\\"THE AUDIENCE DECIDES!\\" Hank gestures grandly at the three people and cardboard cutout.\\n\\n\\"Audience members, what challenge should {{player_name}} face?\\"\\n\\nThe audience confers. One of them is asleep. The cardboard cutout offers no input.\\n\\nFinally, a woman in the front row shouts: \\"MAKE THEM {{random (array \\"SING\\" \\"DANCE\\" \\"DO AN IMPRESSION OF A BLENDER\\" \\"JUST GIVE THEM POINTS FOR FREE\\")}}!\\"\\n\\n{{#if (eq _last_random \\"SING\\")}}\\n\\"You heard her! SING, {{player_name}}! Sing like your points depend on it! Because they do!\\"\\n\\n{{passage \\"Sing beautifully\\"}}\\n{{passage \\"Sing terribly on purpose\\"}}\\n{{/if}}\\n\\n{{#if (eq _last_random \\"DANCE\\")}}\\n\\"DANCE! Show us your moves!\\"\\n\\n{{passage \\"Dance with enthusiasm\\"}}\\n{{passage \\"Do the robot\\"}}\\n{{/if}}\\n\\n{{#if (eq _last_random \\"DO AN IMPRESSION OF A BLENDER\\")}}\\n\\"A BLENDER! Do a blender impression! This is normal television!\\"\\n\\n{{passage \\"WHIRRRRRR\\"}}\\n{{passage \\"Refuse on grounds of dignity\\"}}\\n{{/if}}\\n\\n{{#if (eq _last_random \\"JUST GIVE THEM POINTS FOR FREE\\")}}\\n\\"Free points?! That's not how—\\" Hank checks his cards. \\"Actually, that IS an option apparently.\\"\\n\\n{{inc \\"score\\" 150}}\\n{{#animate \\"toast\\"}}FREE POINTS!{{/animate}}\\n\\n\\"Well! That was anticlimactic! Moving on!\\"\\n\\n{{section \\"Next Round\\"}}\\n{{/if}}\\n",
        "passages": {
            "Sing beautifully": {
                "text": "You belt out an operatic rendition of the show's theme song (which you're making up as you go).\\n\\nThe audience is moved. One of them wakes up specifically to applaud.\\n\\n{{inc \\"score\\" 150}}\\n{{#animate \\"toast\\"}}STANDING OVATION!{{/animate}}\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "Sing terribly on purpose": {
                "text": "You screech like a cat in a tumble dryer. On purpose. For art.\\n\\n{{dec \\"patience\\"}}\\n\\nHank: \\"That was... that was really something. Moving on quickly.\\"\\n\\n{{inc \\"score\\" 25}}\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "Dance with enthusiasm": {
                "text": "You dance like nobody's watching, except everyone is watching, and also there are cameras.\\n\\n{{inc \\"score\\" 125}}\\nThe cardboard cutout falls over again, but in an approving way.\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "Do the robot": {
                "text": "You do the robot so convincingly that a stagehand tries to unplug you.\\n\\n{{inc \\"score\\" 100}}\\n{{#animate \\"toast\\"}}BEEP BOOP{{/animate}}\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "WHIRRRRRR": {
                "text": "You spin around making blender noises. It's deeply unsettling.\\n\\n{{inc \\"score\\" 175}}\\n\\nProfessor Boom's voice echoes from below: \\"MAGNIFICENT!\\"\\n\\n{{section \\"Next Round\\"}}\\n"
            },
            "Refuse on grounds of dignity": {
                "text": "\\"I'm not doing that.\\"\\n\\n{{dec \\"patience\\"}}\\n\\nHank: \\"Fair enough. Moving on with your dignity intact but your score unchanged.\\"\\n\\n{{section \\"Next Round\\"}}\\n"
            }
        }
    },
    "Next Round": {
        "text": "{{#if (gte round 3)}}\\n{{section \\"Final Round\\"}}\\n{{else}}\\nHank shuffles his cards. \\"Alright, {{player_name}}, ready for round {{round}}?\\"\\n\\nThe wheel looms above you, creaking expectantly.\\n\\n{{section \\"Spin the wheel!\\"}}\\n{{/if}}\\n",
        "attributes": [
            "round+=1"
        ]
    },
    "Final Round": {
        "text": "The studio lights go RED. Dramatic music plays (someone is humming aggressively in the background).\\n\\n{{#animate \\"typewriter\\"}}THE FINAL ROUND{{/animate}}\\n\\n\\"This is it, {{player_name}}! The FINAL ROUND!\\" Hank is vibrating with excitement or possibly caffeine.\\n\\n\\"You have {{score}} points! But this last question is worth... {{#animate \\"toast\\"}}DOUBLE OR NOTHING!{{/animate}}\\"\\n\\nThe audience gasps. The cardboard cutout gasps (the AC kicked in).\\n\\n\\"Here is your FINAL QUESTION:\\"\\n\\n{{#animate \\"typewriter\\"}}**What is the name of your host?**{{/animate}}\\n\\n{{passage \\"Hank Spinneroni\\"}}\\n{{passage \\"Chuck Wheelsworth\\"}}\\n{{passage \\"I genuinely don't remember\\"}}\\n",
        "passages": {
            "Hank Spinneroni": {
                "text": "\\"CORRECT! I AM HANK SPINNERONI! Probably!\\"\\n\\n{{set \\"score\\" (score * 2)}}\\n{{#animate \\"toast\\"}}SCORE DOUBLED!{{/animate}}\\n\\n{{section \\"Ending\\"}}\\n"
            },
            "Chuck Wheelsworth": {
                "text": "\\"That was my FIRST name! The WRONG first name! But you remembered SOMETHING!\\"\\n\\n{{inc \\"score\\" 50}}\\n\\n\\"Close enough! I'll allow it because I'm tired!\\"\\n\\n{{section \\"Ending\\"}}\\n"
            },
            "I genuinely don't remember": {
                "text": "{{#if (lte patience 1)}}\\nHank stares at you. A vein throbs in his forehead.\\n\\n\\"It's... it's HANK. My name is HANK. I said it at the START.\\"\\n\\nHe takes a deep breath.\\n\\n\\"You know what? You still win. I just want to go home.\\"\\n\\n{{inc \\"score\\" 25}}\\n{{else}}\\nHank laughs. \\"Honestly? I respect the honesty!\\"\\n\\n{{inc \\"score\\" 75}}\\n\\n\\"The real prize was the confusion we shared along the way!\\"\\n{{/if}}\\n\\n{{section \\"Ending\\"}}\\n"
            }
        }
    },
    "Ending": {
        "text": "{{#if (gte score 500)}}\\n{{#animate \\"toast\\"}}GRAND CHAMPION!{{/animate}}\\n\\nBalloons fall from the ceiling. Confetti explodes. Professor Boom emerges to set off celebratory fireworks (indoors, against regulations).\\n\\n\\"{{player_name}}, you are our GRAND CHAMPION with {{score}} points!\\"\\n\\nHank hands you an oversized novelty check. It bounces.\\n\\n\\"Congratulations! You've won fame, glory, and whatever prizes we can legally give you after the lawyers review the footage!\\"\\n\\nThe audience carries you out on their shoulders. The cardboard cutout leads the parade.\\n\\n**THE END — GRAND CHAMPION**\\n{{else}}\\n{{#if (gte score 200)}}\\n{{#animate \\"toast\\"}}WINNER!{{/animate}}\\n\\n\\"{{player_name}}, you finished with {{score}} points! That's... that's actually pretty good!\\"\\n\\nHank shakes your hand. \\"You've won a lovely parting gift!\\"\\n\\nA stagehand hands you a gift basket containing: one (1) cheese, a coupon for 10% off at a store that closed in 2019, and a sincere thank-you note from Hank.\\n\\n\\"Come back anytime! Assuming we're not cancelled by then!\\"\\n\\n**THE END — WINNER**\\n{{else}}\\n\\"{{player_name}}... you finished with {{score}} points.\\"\\n\\nHank looks at his cards. Looks at you. Looks at the audience.\\n\\n\\"You know what? You showed up. You tried. And in the end, isn't that what matters?\\"\\n\\n{{embed \\"catchphrase\\"}}\\n\\n\\"No, actually, points are what matter. But good effort!\\"\\n\\nHe hands you a single balloon. It's already deflating.\\n\\n**THE END — PARTICIPANT**\\n{{/if}}\\n{{/if}}\\n"
    }
};
story.js = [
];"
`;

exports[`helloworld/helloworld.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Hello, world!"
    }
};
story.js = [
];"
`;

exports[`import/test.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Text from file 1.\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}"
    },
    "_continue1": {
        "text": "{{section \\"file2\\" text=\\"Go to file 2\\"}}\\n"
    },
    "file2": {
        "text": "Text from file 2.\\n\\n{{section \\"_continue2\\" text=\\"Continue from here...\\"}}"
    },
    "_continue2": {
        "text": "Now run the {{passage \\"test\\"}} function.\\n",
        "passages": {
            "test": {
                "text": "",
                "jsIndex": 0
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		test();
	},
];"
`;

exports[`input/input.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Enter some text in the box:\\n\\n<input type=\\"text\\" data-attribute=\\"name\\" placeholder=\\"Type here...\\">\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}"
    },
    "_continue1": {
        "text": "You entered: {{name}}.\\n\\nNow type some more...\\n\\n<textarea data-attribute=\\"some-text\\"></textarea>\\n\\n{{section \\"_continue2\\" text=\\"Continue...\\"}}"
    },
    "_continue2": {
        "text": "You entered: {{some-text}}.\\n\\n<div contenteditable=\\"true\\" data-attribute=\\"some-content\\">\\nThis is editable content.\\n</div>\\n\\n{{section \\"_continue3\\" text=\\"Continue...\\"}}"
    },
    "_continue3": {
        "text": "You entered: {{some-content}}."
    }
};
story.js = [
];"
`;

exports[`last/last.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Test section with some passages. {{passage \\"a\\"}}, {{passage \\"b\\"}}, {{passage \\"c\\"}}.\\n",
        "passageCount": 3,
        "passages": {
            "a": {
                "text": "Passage A.\\n"
            },
            "b": {
                "text": "Passage B.\\n"
            },
            "c": {
                "text": "Passage C.\\n"
            },
            "@last": {
                "text": "You saw all passages! Now go to the {{section \\"section2\\" text=\\"next section\\"}}.\\n"
            }
        }
    },
    "section2": {
        "text": "Second test. {{passage \\"a\\"}}, {{passage \\"b\\"}}, {{passage \\"c\\"}}.\\n",
        "passageCount": 3,
        "passages": {
            "": {
                "text": "Master passage.\\n"
            },
            "a": {
                "text": "Passage A.\\n"
            },
            "b": {
                "text": "Passage B.\\n"
            },
            "c": {
                "text": "Passage C.\\n"
            },
            "@last": {
                "text": "You saw all passages!"
            }
        }
    }
};
story.js = [
];"
`;

exports[`link-attributes/link-attributes.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Hello.\\n\\nChoose {{section \\"next\\" text=\\"one\\" set=\\" t=1,  c+=1\\"}}, {{section \\"next\\" text=\\"two\\" set=\\" t=2,  even=true,  c+=1\\"}} or {{section \\"next\\" text=\\"three\\" set=\\" t=3,  c+=1\\"}}.\\n",
        "attributes": [
            "not even",
            "c = 1"
        ]
    },
    "next": {
        "text": "You selected: {{t}}.\\n\\n{{#if even}}\\nYou selected an even number.\\n{{else}}\\nYou selected an odd number.\\n{{/if}}\\n\\nc = {{c}}.\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}"
    },
    "_continue1": {
        "text": "Now using helpers...\\n\\n\\nChoose\\n{{section \\"next2\\" text=\\"one\\" set=\\"t=1, c+=1\\"}},\\n{{section \\"next2\\" text=\\"two\\" set=\\"t=2, even=true, c+=1\\"}}\\nor\\n{{section \\"next2\\" text=\\"three\\" set=\\"t=3, c+=1\\"}}\\n",
        "attributes": [
            "not even",
            "c = 1"
        ]
    },
    "next2": {
        "text": "You selected: {{t}}.\\n\\n{{#if even}}\\nYou selected an even number.\\n{{else}}\\nYou selected an odd number.\\n{{/if}}\\n\\nc = {{c}}."
    }
};
story.js = [
];"
`;

exports[`live/live.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "This is static: {{count}}.\\n\\nThis is live: {{live \\"count\\"}}.\\n\\nAnd so is this: {{live \\"count\\" section=\\"embedded\\"}}\\n\\n{{section \\"_continue1\\" text=\\"Continue\\"}}",
        "attributes": [
            "count = 0"
        ]
    },
    "_continue1": {
        "text": "Now count is {{count}}.\\n\\n{{section \\"_continue2\\" text=\\"Continue\\"}}",
        "attributes": [
            "count+=1"
        ]
    },
    "_continue2": {
        "text": "Now count is {{count}}.\\n",
        "attributes": [
            "count+=1"
        ]
    },
    "embedded": {
        "text": "Text from a section, and count is {{count}}."
    }
};
story.js = [
];"
`;

exports[`master/master.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "intro";
story.sections = {
    "": {
        "text": "This text appears before each section in the game.\\n",
        "passages": {
            "": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "intro": {
        "text": "This is the first section.\\n\\n{{section \\"_continue1\\" text=\\"Continue...\\"}}"
    },
    "_continue1": {
        "text": "This is the second section. {{passage \\"One\\"}}, {{passage \\"two\\"}}, {{passage \\"three\\"}}. {{section \\"Next!\\"}}\\n",
        "passages": {
            "": {
                "text": "This text appears before each passage in this section.\\n",
                "jsIndex": 1
            },
            "One": {
                "text": "1...\\n"
            },
            "two": {
                "text": "2...\\n"
            },
            "three": {
                "text": "3...\\n"
            }
        }
    },
    "Next!": {
        "text": "Final section, no master passages here. {{passage \\"See\\"}}.\\n",
        "passages": {
            "See": {
                "text": "The end..."
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the entire game.")
	},
	(squiffy, get, set) => {
		console.log("This JS runs for each passage in the second section.");
	},
];"
`;

exports[`replace/replace.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "I {{#label \\"1\\"}}walked{{/label}} to the shops and I bought {{#label \\"2\\"}}a pint of milk{{/label}}.\\n\\nBut then I thought, hang on, I {{passage \\"next\\" text=\\"don't really like milk\\"}}.\\n",
        "passages": {
            "next": {
                "text": "{{#replace \\"2\\"}}a {{passage \\"crate of beer\\"}}{{/replace}}\\nAnd then I thought, hang on, I {{#label \\"3\\"}}{{passage \\"hate walking\\"}}{{/label}}.\\n"
            },
            "crate of beer": {
                "text": "Yes, beer.\\n"
            },
            "hate walking": {
                "text": "{{#replace \\"1\\"}}teleported{{/replace}}\\n{{#replace \\"3\\"}}love teleporting, so much I might {{section \\"section2\\" text=\\"embark on a wild and crazy adventure\\"}}{{/replace}}\\n"
            }
        }
    },
    "section2": {
        "text": "And so it {{#label \\"4\\"}}began...{{/label}}\\n\\n{{section \\"section3\\" text=\\"Or did it?\\"}}\\n"
    },
    "section3": {
        "text": "{{#replace \\"4\\"}}ended {{passage \\"abruptly\\"}}.{{/replace}}\\nOh well.\\n",
        "passages": {
            "abruptly": {
                "text": "That is all."
            }
        }
    }
};
story.js = [
];"
`;

exports[`rotate/rotate.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Choose a number: {{rotate (array \\"one\\" \\"two\\" \\"three\\")}}\\n\\n{{section \\"_continue1\\" text=\\"OK...\\"}}"
    },
    "_continue1": {
        "text": "Now {{rotate (array \\"four\\" \\"five\\" \\"six\\") set=\\"result\\"}}\\n\\n{{section \\"_continue2\\" text=\\"OK...\\"}}"
    },
    "_continue2": {
        "text": "You chose {{result}}.\\n\\nNow for a sequence: {{sequence (array \\"one\\" \\"two\\" \\"three\\" \\"four\\" \\"five\\")}}.\\n\\n{{section \\"_continue3\\" text=\\"And another...\\"}}"
    },
    "_continue3": {
        "text": "Another sequence: {{sequence (array \\"a\\" \\"b\\" \\"c\\" \\"d\\" \\"e\\" \\"f\\" \\"g\\") set=\\"seqresult\\"}}.\\n\\n{{section \\"_continue4\\" text=\\"Finally...\\"}}"
    },
    "_continue4": {
        "text": "You chose {{seqresult}}.\\n\\nHere's a sequence that links to another section. {{sequence (array \\"Ready...\\" \\"Steady...\\" (section \\"Go!\\"))}}\\n"
    },
    "Go!": {
        "text": "That's all folks!"
    }
};
story.js = [
];"
`;

exports[`sectiontrack/sectiontrack.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "Choose: {{section \\"a\\"}}, {{section \\"b\\"}}, {{section \\"c\\"}}. Or read this {{passage \\"note\\"}}.\\n",
        "passages": {
            "note": {
                "text": "This is a passage.\\n"
            }
        }
    },
    "a": {
        "text": "Now choose {{section \\"b\\"}} or {{section \\"c\\"}}.\\n"
    },
    "b": {
        "text": "Now go to {{section \\"c\\"}}.\\n"
    },
    "c": {
        "text": "{{#if (seen \\"a\\")}}You saw A.{{else}}You didn't see A.{{/if}}\\n{{#if (not (seen \\"b\\"))}}You didn't see B.{{else}}You saw B.{{/if}}\\n\\n{{#if (seen \\"note\\")}}You looked at the note.{{else}}You didn't look at the note.{{/if}}"
    }
};
story.js = [
];"
`;

exports[`start/start.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "the start section";
story.sections = {
    "not the start section": {
        "text": "This is page 2, although it was defined first.\\n"
    },
    "the start section": {
        "text": "This is the start section. We also defined a section called {{section \\"not the start section\\"}}."
    }
};
story.js = [
];"
`;

exports[`test/example.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "Introduction";
story.sections = {
    "Introduction": {
        "text": "# Squiffy Test\\nThis is [a website link](http://textadventures.co.uk).\\n\\nThis should be {{passage \\"passage\\" text=\\"a link to a passage\\"}}. Here's {{passage \\"passage2\\" text=\\"another one\\"}}.\\n\\nYou don't need to specify a name - for example, this {{passage \\"link\\"}} and this {{section \\"section\\"}}.\\n\\nAnd this goes to the {{section \\"section2\\" text=\\"next section\\"}}.\\n\\nThis line has links to {{section \\"section 3\\"}} and {{section \\"section four\\" text=\\"section 4\\"}}.\\n\\nThis line has links to {{passage \\"passage 3\\"}} and {{passage \\"passage four\\" text=\\"passage 4\\"}}.\\n\\nOh look - {{passage \\"it's a passage with an apostrophe\\"}}.\\n",
        "passages": {
            "passage": {
                "text": "Here's some text for the passage.\\n"
            },
            "passage2": {
                "text": "This is the text for the second passage.\\n",
                "jsIndex": 0
            },
            "passage 3": {
                "text": "Another passage.\\n"
            },
            "passage four": {
                "text": "Yet another passage.\\n"
            },
            "link": {
                "text": "Here is the text for the simple link.\\n"
            },
            "it's a passage with an apostrophe": {
                "text": "Nothing to worry about.\\n"
            }
        }
    },
    "section2": {
        "text": "This is the next section, with passages {{passage \\"a\\"}} and {{passage \\"b\\"}}.\\n",
        "jsIndex": 1,
        "passages": {
            "a": {
                "text": "Just a.\\n"
            },
            "b": {
                "text": "Just b.\\n"
            }
        }
    },
    "section": {
        "text": "This is another section, with passages {{passage \\"a\\"}} and {{passage \\"b\\"}}.\\n",
        "passages": {
            "a": {
                "text": "Just a in a different section.\\n"
            },
            "b": {
                "text": "Just b in a different section.\\n"
            }
        }
    },
    "section 3": {
        "text": "Another section is here, with passages {{passage \\"a\\"}} and {{passage \\"b\\"}}.\\n",
        "passages": {
            "a": {
                "text": "Just a in section3.\\n"
            },
            "b": {
                "text": "Just b in section3.\\n"
            }
        }
    },
    "section four": {
        "text": "Some other section, with passages {{passage \\"a\\"}} and {{passage \\"b\\"}}.\\n",
        "passages": {
            "a": {
                "text": "Just a in section four.\\n"
            },
            "b": {
                "text": "Just b in section four."
            }
        }
    }
};
story.js = [
	(squiffy, get, set) => {
		alert ("This passage has some JavaScript");
	},
	(squiffy, get, set) => {
		alert ("This section has some JavaScript");
	},
];"
`;

exports[`textprocessor/textprocessor.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "It's another {{random (array \\"Monday\\" \\"Tuesday\\" \\"Wednesday\\" \\"Thursday\\" \\"Friday\\" \\"Saturday\\" \\"Sunday\\")}} in the city.\\n\\nThe weather is {{random (array \\"sunny\\" \\"cloudy\\" \\"rainy\\" \\"windy\\" \\"snowy\\") set=\\"weather\\"}}.\\n\\nChoose a gender:\\n\\n* {{section \\"start\\" text=\\"Male\\" set=\\" gender=male\\"}}\\n* {{section \\"start\\" text=\\"Female\\" set=\\" gender=female\\"}}\\n"
    },
    "start": {
        "text": "You chose {{gender}}.\\n\\n{{#if (eq gender \\"male\\")}}\\nYou are a man.\\n{{else}}\\nYou are a woman.\\n{{/if}}\\n\\nIt's still {{weather}}.\\n\\n{{passage \\"Next\\"}}\\n",
        "passages": {
            "Next": {
                "text": "This is a test. {{embed \\"passage\\"}} {{embed \\"section\\"}}\\n"
            },
            "passage": {
                "text": "Text from passage.\\n"
            }
        }
    },
    "section": {
        "text": "Text from section."
    }
};
story.js = [
];"
`;

exports[`transitions/transitions.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "You are standing in a room. You can see a {{passage \\"hammer\\"}}.\\n",
        "passages": {
            "hammer": {
                "text": "It's nice and weighty. Perhaps you want to {{section \\"hit\\" text=\\"hit yourself in the face with it\\"}}?\\n"
            }
        }
    },
    "hit": {
        "text": "Bang.\\n",
        "jsIndex": 0
    },
    "wake up": {
        "clear": true,
        "text": "Slowly your eyes open.\\n\\nThat was a rather stupid thing to do."
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.ui.transition(function(){
		    return new Promise((resolve) => {
		        // Create a blackout <div>...
		        const blackout = document.createElement("div");
		        blackout.id = "blackout";
		        Object.assign(blackout.style, {
		            position: "fixed",
		            top: "0",
		            left: "0",
		            width: "100%",
		            height: "100%",
		            background: "black",
		            opacity: "0",              // start transparent
		            transition: "opacity 6s ease-in" // fade duration + easing
		        });
		        squiffy.element.appendChild(blackout);
		        // Force style recalculation before starting the fade
		        requestAnimationFrame(() => {
		            blackout.style.opacity = "1"; // fade in over 6s
		        });
		        // After fading it in...
		        setTimeout(() => {
		            // Move to the next section...
		            squiffy.story.go("wake up");
		            // Fade out the blackout
		            blackout.style.transition = "opacity 6s ease-in";
		            blackout.style.opacity = "0";
		            // Remove <div> after transition ends
		            blackout.addEventListener("transitionend", () => {
		                blackout.remove();
		                resolve();
		            }, { once: true });
		        }, 9000);
		    });
		});
	},
];"
`;

exports[`turncount/turncount.squiffy 1`] = `
"export const story = {};
story.id = "00000000-0000-0000-0000-000000000000";
story.start = "_default";
story.sections = {
    "_default": {
        "text": "After clicking two links in this section, an additional passage will be displayed.\\n\\n{{passage \\"One\\"}}, {{passage \\"two\\"}}, {{passage \\"three\\"}}, {{passage \\"four\\"}}.\\n",
        "passages": {
            "One": {
                "text": "First passage.\\n"
            },
            "two": {
                "text": "Second passage.\\n"
            },
            "three": {
                "text": "Third passage.\\n"
            },
            "four": {
                "text": "Fourth passage.\\n"
            },
            "@2": {
                "text": "This is some extra text to appear after the second click. The {{section \\"next section\\"}} is also good.\\n"
            }
        }
    },
    "next section": {
        "text": "In this section, you can only click one link, and then you'll be taken to the final section.\\n\\n{{passage \\"One\\"}}, {{passage \\"two\\"}}, {{passage \\"three\\"}}, {{passage \\"four\\"}}.\\n",
        "passages": {
            "One": {
                "text": "First passage.\\n"
            },
            "two": {
                "text": "Second passage.\\n"
            },
            "three": {
                "text": "Third passage.\\n"
            },
            "four": {
                "text": "Fourth passage.\\n"
            },
            "@1": {
                "text": "",
                "jsIndex": 0
            }
        }
    },
    "final section": {
        "text": "**THE END**"
    }
};
story.js = [
	(squiffy, get, set) => {
		squiffy.story.go("final section");
	},
];"
`;

exports[`warnings/warnings.squiffy 1`] = `
[
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection2]], which doesn't exist",
  "WARNING: warnings.squiffy line 1: In section '_default' there is a link to a section called [[badsection]], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage2], which doesn't exist",
  "WARNING: warnings.squiffy line 9: In section 'section' there is a link to a passage called [badpassage], which doesn't exist",
  "WARNING: warnings.squiffy line 19: In section 'section', passage 'passage' there is a link to a passage called [non-existent passage], which doesn't exist",
]
`;

exports[`warnings/warnings2.squiffy 1`] = `
[
  "WARNING: warnings2.squiffy line 1: In section 'test' there is a link to a passage called [doesn't exist], which doesn't exist",
]
`;
